--- a/nsplit/nsplit.csproj
+++ b/nsplit/nsplit.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Depender.Parser\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analyzer\Analyzer.cs" />
+    <Compile Include="Analyzer\TypeTreeBuilder.cs" />
     <Compile Include="Api\DependenciesController.cs" />
     <Compile Include="Analyzer\Dependecy.cs" />
     <Compile Include="Analyzer\DependencyKind.cs" />
@@ -68,7 +69,19 @@
     <Compile Include="Analyzer\Implements.cs" />
     <Compile Include="Analyzer\MethodCall.cs" />
     <Compile Include="Api\Node.cs" />
+    <Compile Include="Api\QualifiedTreeNodeDto.cs" />
+    <Compile Include="Api\TreeViewController.cs" />
+    <Compile Include="DataStructures\IQualifiedTreeNode.cs" />
+    <Compile Include="DataStructures\QualifiedTree.cs" />
+    <Compile Include="DataStructures\QualifiedTreeLeaf.cs" />
+    <Compile Include="DataStructures\QualifiedTreeNode.cs" />
+    <Compile Include="DataStructures\QualifiedTreeNodeBase.cs" />
+    <Compile Include="DataStructures\QualifiedTreeNodeFactory.cs" />
+    <Compile Include="DataStructures\QualifiedName.cs" />
     <Compile Include="Helper\FileType.cs" />
+    <None Include="html\css\main.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\WebServerOnFolder.cs" />
@@ -82,16 +95,13 @@
     <None Include="readme.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="html\css\style.css">
+    <None Include="html\css\jstree.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="html\index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="html\js\lib\arbor.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="html\js\lib\jquery-1.6.1.min.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="html\js\main.js">
@@ -104,7 +114,38 @@
       <Name>Depender.Parser</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="html\css\32px.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\css\40px.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\css\c.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\css\n.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\css\throbber.gif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\index2.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\js\lib\jquery.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\js\lib\jquery.ui.touch.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\js\lib\jstree.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="html\js\lib\require.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
