--- a/nsplit/packages.config
+++ b/nsplit/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.1.0" targetFramework="net45" />
