--- a/nsplit/nsplit.csproj
+++ b/nsplit/nsplit.csproj
@@ -66,26 +66,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analyzer\Analyzer.cs" />
-    <Compile Include="Analyzer\TypeTreeBuilder.cs" />
+    <Compile Include="CodeAnalyzis\AnalyzerExtensions.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\TypeTreeBuilder.cs" />
     <Compile Include="Api\DependenciesController.cs" />
-    <Compile Include="Analyzer\Dependecy.cs" />
-    <Compile Include="Analyzer\DependencyKind.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\Dependecy.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\DependencyKind.cs" />
     <Compile Include="Api\Dto\EdgeDto.cs" />
     <Compile Include="Api\Dto\VertexDto.cs" />
-    <Compile Include="DataStructures\Graph\Edge.cs" />
-    <Compile Include="Analyzer\Implements.cs" />
-    <Compile Include="Analyzer\MethodCall.cs" />
-    <Compile Include="DataStructures\Graph\Vertex.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\Implements.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\MethodCall.cs" />
     <Compile Include="Api\Dto\NodeDto.cs" />
     <Compile Include="Api\TreeViewController.cs" />
-    <Compile Include="DataStructures\Tree\INode.cs" />
-    <Compile Include="DataStructures\Tree\Tree.cs" />
-    <Compile Include="DataStructures\Tree\Leaf.cs" />
-    <Compile Include="DataStructures\Tree\Node.cs" />
-    <Compile Include="DataStructures\Tree\NodeBase.cs" />
-    <Compile Include="DataStructures\Tree\NodeFactory.cs" />
-    <Compile Include="DataStructures\Tree\QualifiedName.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\INode.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\Tree.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\Leaf.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\Node.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\NodeBase.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\NodeFactory.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\TypeTree\QualifiedName.cs" />
     <Compile Include="Helper\FileType.cs" />
     <None Include="html\css\main.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -93,7 +91,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\WebServerOnFolder.cs" />
-    <Compile Include="Analyzer\Uses.cs" />
+    <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\Uses.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -162,6 +160,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
