--- a/Gma.CodeGravity.Tests/Gma.CodeGravity.Tests.csproj
+++ b/Gma.CodeGravity.Tests/Gma.CodeGravity.Tests.csproj
@@ -59,9 +59,12 @@
     <Compile Include="TestData\TypeA.cs" />
     <Compile Include="TestData\TypeB.cs" />
     <Compile Include="TestData\TypeC.cs" />
-    <Compile Include="TestData\TypeD.cs" />
+    <Compile Include="TestData\TypeWithFieldOfIEnumerableString.cs" />
     <Compile Include="AnalyzerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestData\TypeWithFieldOfTypeTupleIntFloat.cs" />
+    <Compile Include="TestData\TypeWithMethodAcceptingIEnumerableOfChar.cs" />
+    <Compile Include="TestData\TypeWithMethodReturnIEnumerableOfInt.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\nsplit\nsplit.csproj">
