Dependency.Equals added again; added test for partially constructed types

--- a/Gma.CodeGravity.Tests/Gma.CodeGravity.Tests.csproj
+++ b/Gma.CodeGravity.Tests/Gma.CodeGravity.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="TestData\TypeA.cs" />
     <Compile Include="TestData\TypeB.cs" />
     <Compile Include="TestData\TypeC.cs" />
+    <Compile Include="TestData\TypeOfTWithFieldOfIDictionaryTChar.cs" />
     <Compile Include="TestData\TypeWithFieldOfIEnumerableString.cs" />
     <Compile Include="AnalyzerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
