Introduced async discovery of dependencies

--- a/nsplit/nsplit.csproj
+++ b/nsplit/nsplit.csproj
@@ -69,15 +69,13 @@
     <Compile Include="CodeAnalyzis\AnalyzerExtensions.cs" />
     <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\AdjacencyMatrix.cs" />
     <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\DependecyKindExtensions.cs" />
-    <Compile Include="CodeAnalyzis\DependencyGraphBuilder.cs" />
+    <Compile Include="CodeAnalyzis\DependencyGraph.cs" />
     <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\DependencyKinds.cs" />
     <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\Edge.cs" />
-    <Compile Include="CodeAnalyzis\TypeTreeBuilder.cs" />
     <Compile Include="Api\DependenciesController.cs" />
     <Compile Include="CodeAnalyzis\Dependency.cs" />
     <Compile Include="CodeAnalyzis\DependencyKind.cs" />
     <Compile Include="Api\Dto\EdgeDto.cs" />
-    <Compile Include="Api\Dto\VertexDto.cs" />
     <Compile Include="CodeAnalyzis\Implements.cs" />
     <Compile Include="CodeAnalyzis\MethodCall.cs" />
     <Compile Include="Api\Dto\NodeDto.cs" />
@@ -162,6 +160,9 @@
       <Link>AutoMapper.Net4.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="html\js\lib\d3.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
