Problems rendering large graphs. Evaluating another visualization lib.

--- a/nsplit/nsplit.csproj
+++ b/nsplit/nsplit.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeAnalyzis\AnalyzerExtensions.cs" />
+    <Compile Include="CodeAnalyzis\BuildProgressEventArgs.cs" />
     <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\AdjacencyMatrix.cs" />
     <Compile Include="CodeAnalyzis\DataStructures\DependencyGraph\DependecyKindExtensions.cs" />
     <Compile Include="CodeAnalyzis\DependencyGraph.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="CodeAnalyzis\Dependency.cs" />
     <Compile Include="CodeAnalyzis\DependencyKind.cs" />
     <Compile Include="Api\Dto\EdgeDto.cs" />
+    <Compile Include="CodeAnalyzis\EdgeAddedEventArgs.cs" />
     <Compile Include="CodeAnalyzis\Implements.cs" />
     <Compile Include="CodeAnalyzis\MethodCall.cs" />
     <Compile Include="Api\Dto\NodeDto.cs" />
@@ -160,6 +162,9 @@
       <Link>AutoMapper.Net4.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="html\index2.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="html\js\lib\d3.min.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
