--- a/Gma.CodeVisuals.WebApi/Gma.CodeVisuals.WebApi.csproj
+++ b/Gma.CodeVisuals.WebApi/Gma.CodeVisuals.WebApi.csproj
@@ -41,9 +41,6 @@
     <Reference Include="AutoMapper">
       <HintPath>..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="Depender.Parser">
-      <HintPath>..\packages\Depender.Parser\lib\Depender.Parser.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -67,18 +64,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\DependencyForceGraph\Dto\Tree.cs" />
-    <Compile Include="Api\DependencyForceGraph\Dto\LinkDto.cs" />
-    <Compile Include="Api\DependencyForceGraph\Dto\GraphDto.cs" />
-    <Compile Include="Api\DependencyForceGraph\Storage.cs" />
-    <Compile Include="Api\DependencyForceGraph\DependenciesController.cs" />
-    <Compile Include="Helper\FileType.cs" />
+    <Compile Include="DependencyForceGraph\Dto\Tree.cs" />
+    <Compile Include="DependencyForceGraph\Dto\LinkDto.cs" />
+    <Compile Include="DependencyForceGraph\Dto\GraphDto.cs" />
+    <Compile Include="DependencyForceGraph\Storage.cs" />
+    <Compile Include="DependencyForceGraph\DependenciesController.cs" />
+    <Compile Include="Server\FileType.cs" />
     <None Include="html\css\main.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helper\WebServerOnFolder.cs" />
+    <Compile Include="Server\WebServerOnFolder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
