Improved  command line help.

--- a/Gma.CodeVisuals.WebApi/Gma.CodeVisuals.WebApi.csproj
+++ b/Gma.CodeVisuals.WebApi/Gma.CodeVisuals.WebApi.csproj
@@ -82,13 +82,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="nsplit.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="readme.html">
+    <None Include="port8080problem.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
