--- a/Gma.CodeVisuals.WebApi/Gma.CodeVisuals.WebApi.csproj
+++ b/Gma.CodeVisuals.WebApi/Gma.CodeVisuals.WebApi.csproj
@@ -82,8 +82,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\WebServerOnFolder.cs" />
-    <None Include="_DependencyForceGraphs\[DEMO LARGE] System.Core.json" />
-    <None Include="_DependencyForceGraphs\[DEMO SMALL] Microsoft.Practices.EnterpriseLibrary.Logging.json" />
+    <None Include="_DependencyForceGraphs\[DEMO LARGE] System.Core.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="_DependencyForceGraphs\[DEMO SMALL] Microsoft.Practices.EnterpriseLibrary.Logging.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
